Use sequenced collection methods where applicable